feat: Complete Sprint 0025 enhanced content generation pipeline
Epic 2 Implementation (8 pts complete):
- Story 2.1: Planner component with exemplar integration (2 pts)
- Story 2.2: Enhanced content prompts with exemplar_content_builder pack (3 pts)
- Story 2.3: Element mapping architecture with ContentElement → LayoutElement pipeline (2 pts)
- Story 2.4: Layout enhancement integration with constraint solver compatibility (1 pt)

Key Components Delivered:
• ExemplarContentGenerator with quality analysis and fallback generation
• Complete element mapping pipeline: ContentElementMapper → ElementGraphBuilder → LayoutElementTransformer
• LayoutEnhancementProcessor/Orchestrator for end-to-end workflow
• exemplar_content_builder v1.0.0 prompt pack with Jinja2 templates
• Enhanced planner models with SPEAKER_NOTES support
• Comprehensive test coverage (105 tests across all components)

Architecture Achievements:
• Multi-agent content generation from planner → enhanced content → positioned elements
• Exemplar context propagation throughout entire workflow
• Quality analysis at each transformation stage
• Full compatibility with existing layout engines and constraint solver
• Complete operational pipeline ready for production use

Sprint Status: 100% complete (20/20 story points delivered)
Testing: All 105 tests passing across exemplars, enhanced content, element mapping, layout integration

--- a/sh/bootstrap-dev/src/installation-manifest.yaml
+++ b/sh/bootstrap-dev/src/installation-manifest.yaml
@@ -5,41 +5,41 @@ version: "1.0.0"
 name: "ai-guardrails-installation"
 
 # File discovery patterns instead of hardcoded lists
-file_patterns:
+components:
   core:
     description: "Core AI guardrails configuration"
-    patterns:
+    file_patterns:
       - ".ai/*.yaml"
       - ".ai/*.json"
-    
+
   schemas:
     description: "JSON schemas for validation"
-    patterns:
+    file_patterns:
       - "ai/schemas/*.json"
-    
+
   scripts:
     description: "All automation scripts"
-    patterns:
+    file_patterns:
       - "ai/scripts/*.py"
       - "ai/scripts/*.sh"
     post_install:
       - "chmod +x ai/scripts/*.py ai/scripts/*.sh"
-    
+
   github:
     description: "GitHub integration files"
-    patterns:
-      - "templates/.github/**/*"
+    file_patterns:
+      - ".github/**/*"
     target_prefix: ""  # Remove 'templates/' prefix when installing
-    
+
   precommit:
     description: "Pre-commit configuration"
-    patterns:
+    file_patterns:
       - ".pre-commit-config.yaml"
-    
+
   docs:
-    description: "All documentation templates" 
-    patterns:
-      - "templates/docs/**/*.md"
+    description: "All documentation templates"
+    file_patterns:
+      - "docs/**/*"
       - "ai/*.md"  # capabilities.md etc
     target_prefix: ""  # Remove 'templates/' prefix when installing
 
@@ -48,11 +48,11 @@ profiles:
   minimal:
     description: "Minimal installation - core only"
     components: ["core", "schemas"]
-    
+
   standard:
     description: "Standard installation for most projects"
     components: ["core", "schemas", "scripts", "precommit", "docs"]
-    
+
   full:
     description: "Full installation with GitHub integration"
     components: ["core", "schemas", "scripts", "github", "precommit", "docs"]
@@ -68,6 +68,12 @@ environment_detection:
 
 # Global settings
 settings:
+  # Template repository configuration
+  template_repository: "ai-guardrails-templates"  # Relative to manifest directory (src/)
+
+  # Plugin repository configuration
+  plugins_directory: "plugins"  # Relative to manifest directory (src/)
+
   auto_create_directories: true
   preserve_existing: true  # Don't overwrite without --force
   validate_before_install: true
