feat: Add professional doctor/ensure workflows with YAML repair manifests

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,3 +26,7 @@ repos:
         language: system
         pass_filenames: false
         stages: [pre-push]
+      - id: demos-on-rails-lint
+        name: demos-on-rails-lint
+        language: system
+        entry: python sh/bootstrap-dev/src/plugins/demos-on-rails-kit/ai/scripts/check_demo_on_rails.py
