--- a/sh/bootstrap-dev/.pre-commit-config.yaml
+++ b/sh/bootstrap-dev/.pre-commit-config.yaml
@@ -16,17 +16,17 @@ repos:
         pass_filenames: false
       - id: lang-test-quick
         name: language test (quick)
-        entry: ai/scripts/lang_test.sh
+        entry: bash src/bootstrap-dev/ai/scripts/lang_test.sh
         language: system
         pass_filenames: false
         stages: [pre-push]
       - id: ai-envelope-local
         name: AI envelope (local scope check)
-        entry: python ai/scripts/check_envelope_local.py
+        entry: python src/bootstrap-dev/ai/scripts/check_envelope_local.py
         language: system
         pass_filenames: false
         stages: [pre-push]
       - id: demos-on-rails-lint
         name: demos-on-rails-lint
         language: system
-        entry: python test-demoai/plugins/ai/demo-on-rails-kitscripts/check_demo_on_rails.py
+        entry: python src/bootstrap-dev/src/plugins/demos-on-rails-kit/ai/scripts/check_demo_on_rails.py
