--- a/sh/bootstrap-dev/.ai/guardrails.yaml
+++ b/sh/bootstrap-dev/.ai/guardrails.yaml
@@ -1,22 +1,25 @@
 python:
-  lint: "ruff check ."
-  type: "mypy ."
-  test: "pytest -q"
+  lint: ruff check .
+  type: mypy .
+  test: pytest -q
 node:
-  lint: "npx -y eslint . || npx -y @biomejs/biome check ."
-  type: "npx -y tsc --noEmit"
-  test: "npm test --silent || pnpm -s test || yarn -s test"
+  lint: npx -y eslint . || npx -y @biomejs/biome check .
+  type: npx -y tsc --noEmit
+  test: npm test --silent || pnpm -s test || yarn -s test
 go:
-  lint: "golangci-lint run || (go vet ./... && echo 'fallback go vet ok')"
-  test: "go test ./..."
+  lint: golangci-lint run || (go vet ./... && echo 'fallback go vet ok')
+  test: go test ./...
 rust:
-  lint: "cargo clippy --no-deps -q -D warnings || echo 'clippy not installed'"
-  test: "cargo test --quiet"
+  lint: cargo clippy --no-deps -q -D warnings || echo 'clippy not installed'
+  test: cargo test --quiet
 java:
-  test: "mvn -q -DskipTests=false test || ./gradlew test"
+  test: mvn -q -DskipTests=false test || ./gradlew test
 dotnet:
-  test: "dotnet test --nologo --verbosity quiet"
+  test: dotnet test --nologo --verbosity quiet
 generic:
-  shell: "shopt -s globstar nullglob; (command -v shellcheck >/dev/null && shellcheck **/*.sh) || echo 'shellcheck not found'"
-  docker: "shopt -s globstar nullglob; (command -v hadolint >/dev/null && hadolint **/Dockerfile* || echo 'hadolint not found')"
-  markdown: "(command -v markdownlint >/dev/null && markdownlint . || echo 'markdownlint not found')"
+  shell: shopt -s globstar nullglob; (command -v shellcheck >/dev/null && shellcheck
+    **/*.sh) || echo 'shellcheck not found'
+  docker: shopt -s globstar nullglob; (command -v hadolint >/dev/null && hadolint
+    **/Dockerfile* || echo 'hadolint not found')
+  markdown: (command -v markdownlint >/dev/null && markdownlint . || echo 'markdownlint
+    not found')
