feat: Add configurable pre-commit language pack disabling
- Add precommit configuration section to guardrails.yaml template
- Support disabled_languages: disable hooks by language detection (python, java, etc)
- Support disabled_hooks: disable specific hooks by ID
- Add configure-precommit CLI command to reconfigure hooks after installation
- Automatically apply configuration during precommit component installation
- Detect language usage in hook names, IDs, and entry commands
- Perfect for language-specific projects (e.g. disable Python linting in Rust projects)

Examples:
  precommit:
    disabled_languages: ['python', 'node']  # Disable Python and Node.js hooks
    disabled_hooks: ['lang-test-quick']     # Disable specific hook ID

--- a/sh/bootstrap-dev/.ai/guardrails.yaml
+++ b/sh/bootstrap-dev/.ai/guardrails.yaml
@@ -23,3 +23,8 @@ generic:
     **/Dockerfile* || echo 'hadolint not found')
   markdown: (command -v markdownlint >/dev/null && markdownlint . || echo 'markdownlint
     not found')
+
+# Pre-commit hook configuration (optional)
+precommit:
+  # disabled_languages: ["python"]  # Disable all hooks containing these languages
+  disabled_hooks: ["lang-test-quick"]     # Disable specific hook IDs
