fix: Handle bootstrap from scratch for new projects
- Add _load_manifest() fallback for missing manifest files
- Add _bootstrap_from_remote() to copy templates from local repo
- Add _create_minimal_manifest() as final fallback
- Update init() to detect and handle fresh project scenarios
- Enable ai-guardrails init to work in any directory without existing setup

Fixes: Error: [Errno 2] No such file or directory: 'src/installation-manifest.yaml'

--- a/sh/bootstrap-dev/.ai/guardrails.yaml
+++ b/sh/bootstrap-dev/.ai/guardrails.yaml
@@ -25,6 +25,6 @@ generic:
     not found')
 
 # Pre-commit hook configuration (optional)
-precommit:
-  # disabled_languages: ["python"]  # Disable all hooks containing these languages
-  disabled_hooks: ["lang-test-quick"]     # Disable specific hook IDs
+# precommit:
+#   disabled_languages: ["python"]  # Disable all hooks containing these languages
+#   disabled_hooks: ["lang-test-quick"]     # Disable specific hook IDs
