chore: cleanup and enhance bootstrap infrastructure
- Remove deprecated demos-on-rails-kit.old directory
- Add modular bootstrap script for improved template management
- Update guardrails configuration and state management
- Add GitHub workflow for copilot guardrails
- Create documentation templates for ADRs, COEs, and sprints
- Add naming conventions documentation
- Update installation manifest and infrastructure bootstrap
- Enhance pre-commit configuration

This consolidates the bootstrap system improvements and removes
obsolete components after the demos-on-rails-kit integration.

--- a/sh/bootstrap-dev/.ai-guardrails-state.yaml
+++ b/sh/bootstrap-dev/.ai-guardrails-state.yaml
@@ -6,6 +6,7 @@ installed_components:
 - schemas
 - docs
 - scripts
+- github
 installation_history:
 - timestamp: '2025-09-04T19:36:59.042926'
   action: install_component
@@ -31,3 +32,6 @@ installation_history:
   - scripts
   - precommit
   - docs
+- timestamp: '2025-09-04T21:20:16.867922'
+  action: install_component
+  component: github
