--- a/sh/bootstrap-dev/.ai/guardrails.yaml
+++ b/sh/bootstrap-dev/.ai/guardrails.yaml
@@ -24,7 +24,17 @@ generic:
   markdown: (command -v markdownlint >/dev/null && markdownlint . || echo 'markdownlint
     not found')
 
-# Pre-commit hook configuration (optional)
-# precommit:
-#   disabled_languages: ["python"]  # Disable all hooks containing these languages
-#   disabled_hooks: ["lang-test-quick"]     # Disable specific hook IDs
+# Pre-commit hook configuration
+precommit:
+  # Disable specific hooks by ID
+  disabled_hooks:
+    # - lang-lint          # Disable language-specific linting
+    # - lang-test-quick     # Disable quick language tests
+    # - ai-envelope-local   # Disable AI envelope local checks
+  
+  # Disable hooks by language/technology
+  disabled_languages:
+    # - python              # Disable all Python-related hooks
+    # - node                # Disable all Node.js-related hooks
+    # - go                  # Disable all Go-related hooks
+    # - rust                # Disable all Rust-related hooks
