--- a/.ai/guardrails.yaml
+++ b/.ai/guardrails.yaml
@@ -1,17 +1,30 @@
 python:
-  lint: "ruff check ."
-  type: "mypy ."
-  test: "pytest -q"
-node:
-  lint: "npx -y eslint . || npx -y @biomejs/biome check ."
-  type: "npx -y tsc --noEmit"
-  test: "npm test --silent || pnpm -s test || yarn -s test"
-go:
-  lint: "golangci-lint run || (go vet ./... && echo 'fallback go vet ok')"
-  test: "go test ./..."
+  lint: ruff check .
+  test: pytest -q
+  type: mypy .
 rust:
-  lint: "cargo clippy --no-deps -q -D warnings || echo 'clippy not installed'"
-  test: "cargo test --quiet"
+  lint: cargo clippy --no-deps -q -D warnings || echo 'clippy not installed'
+  test: cargo test --quiet
+go:
+  lint: golangci-lint run || (go vet ./... && echo 'fallback go vet ok')
+  test: go test ./...
+java:
+  test: mvn -q -DskipTests=false test || ./gradlew test
+node:
+  lint: npx -y eslint . || npx -y @biomejs/biome check .
+  test: npm test --silent || pnpm -s test || yarn -s test
+  type: npx -y tsc --noEmit
+dotnet:
+  test: dotnet test --nologo --verbosity quiet
 generic:
-  shell: "shellcheck **/*.sh || echo 'shellcheck not found'"
-  markdown: "markdownlint . || echo 'markdownlint not found'"
+  docker: shopt -s globstar nullglob; (command -v hadolint >/dev/null && hadolint
+    **/Dockerfile* || echo 'hadolint not found')
+  markdown: (command -v markdownlint >/dev/null && markdownlint . || echo 'markdownlint
+    not found')
+  shell: shopt -s globstar nullglob; (command -v shellcheck >/dev/null && shellcheck
+    **/*.sh) || echo 'shellcheck not found'
+
+precommit:
+  # disabled_hooks: null
+  disabled_languages:
+    - python
