--- a/sh/bootstrap-dev/.ai/guardrails.yaml
+++ b/sh/bootstrap-dev/.ai/guardrails.yaml
@@ -33,7 +33,7 @@ precommit:
 
   # Disable hooks by language/technology
   disabled_languages:
-    # python              # Disable all Python-related hooks
+    # - python              # Disable all Python-related hooks
     # - node                # Disable all Node.js-related hooks
     # - go                  # Disable all Go-related hooks
     # - rust                # Disable all Rust-related hooks
