--- a/sh/bootstrap-dev/.ai/guardrails.yaml
+++ b/sh/bootstrap-dev/.ai/guardrails.yaml
@@ -1,69 +1,55 @@
 python:
-  lint: "ruff check ."
-  type: "mypy ."
-  test: "pytest -q"
-node:
-  lint: "npx -y eslint . || npx -y @biomejs/biome check ."
-  type: "npx -y tsc --noEmit"
-  test: "npm test --silent || pnpm -s test || yarn -s test"
-go:
-  lint: "golangci-lint run || (go vet ./... && echo 'fallback go vet ok')"
-  test: "go test ./..."
+  lint: ruff check .
+  test: pytest -q
+  type: mypy .
 rust:
-  lint: "cargo clippy --no-deps -q -D warnings || echo 'clippy not installed'"
-  test: "cargo test --quiet"
+  lint: cargo clippy --no-deps -q -D warnings || echo 'clippy not installed'
+  test: cargo test --quiet
+go:
+  lint: golangci-lint run || (go vet ./... && echo 'fallback go vet ok')
+  test: go test ./...
 java:
-  test: "mvn -q -DskipTests=false test || ./gradlew test"
+  test: mvn -q -DskipTests=false test || ./gradlew test
+node:
+  lint: npx -y eslint . || npx -y @biomejs/biome check .
+  test: npm test --silent || pnpm -s test || yarn -s test
+  type: npx -y tsc --noEmit
 dotnet:
-  test: "dotnet test --nologo --verbosity quiet"
+  test: dotnet test --nologo --verbosity quiet
 generic:
-  shell: "shopt -s globstar nullglob; (command -v shellcheck >/dev/null && shellcheck **/*.sh) || echo 'shellcheck not found'"
-  docker: "shopt -s globstar nullglob; (command -v hadolint >/dev/null && hadolint **/Dockerfile* || echo 'hadolint not found')"
-  markdown: "(command -v markdownlint >/dev/null && markdownlint . || echo 'markdownlint not found')"
-
-# Pre-commit hook configuration (optional)
-# Uncomment and customize the section below to disable specific language packs
-# Example: disable Python linting in a Rust-only project
+  docker: shopt -s globstar nullglob; (command -v hadolint >/dev/null && hadolint
+    **/Dockerfile* || echo 'hadolint not found')
+  markdown: (command -v markdownlint >/dev/null && markdownlint . || echo 'markdownlint
+    not found')
+  shell: shopt -s globstar nullglob; (command -v shellcheck >/dev/null && shellcheck
+    **/*.sh) || echo 'shellcheck not found'
 precommit:
-  # Disable specific hooks by ID
-  disabled_hooks:
-    # - lang-lint          # Disable language-specific linting
-    # - lang-test-quick     # Disable quick language tests
-    # - ai-envelope-local   # Disable AI envelope local checks
-
-  # Disable hooks by language/technology
-  disabled_languages:
-    # - python              # Disable all Python-related hooks
-    # - node                # Disable all Node.js-related hooks
-    # - go                  # Disable all Go-related hooks
-    # - rust                # Disable all Rust-related hooks
-    # - java                # Disable all Java-related hooks
-    # - dotnet              # Disable all .NET-related hooks
+  disabled_hooks: null
+  disabled_languages: null
 
 docs:
+  paths:
+    adrs: docs/decisions/
+    coe: docs/coe/
+    sprints: docs/sprints/
   validation:
-    enabled: true
     adr:
       required_sections:
-        - Title
-        - Status
-        - Context
-        - Decision
-        - Consequences
+      - Title
+      - Status
+      - Context
+      - Decision
+      - Consequences
     coe:
       required_sections:
-        - Overview
-        - Scope
-        - Responsibilities
-        - Success Metrics
+      - Overview
+      - Scope
+      - Responsibilities
+      - Success Metrics
+    enabled: true
     sprint_plans:
       required_sections:
-        - Sprint Overview
-        - Goals
-        - Deliverables
-        - Timeline
-
-  paths:
-    adrs: "docs/decisions/"
-    coe: "docs/coe/"
-    sprints: "docs/sprints/"
+      - Sprint Overview
+      - Goals
+      - Deliverables
+      - Timeline
