--- a/sh/bootstrap-dev/.pre-commit-config.yaml
+++ b/sh/bootstrap-dev/.pre-commit-config.yaml
@@ -1,31 +1,30 @@
 repos:
-- repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: v4.6.0
-  hooks:
+- hooks:
   - id: end-of-file-fixer
   - id: trailing-whitespace
   - id: mixed-line-ending
   - id: check-merge-conflict
   - id: detect-private-key
-- repo: local
-  hooks:
-  - id: lang-lint
+  repo: https://github.com/pre-commit/pre-commit-hooks
+  rev: v4.6.0
+- hooks:
+  - entry: ai/scripts/lang_lint.sh
+    id: lang-lint
+    language: system
     name: language lint (auto-detect)
-    entry: ai/scripts/lang_lint.sh
-    language: system
     pass_filenames: false
-    exclude: (.*\.py$)
-  - id: lang-test-quick
+  - entry: ai/scripts/lang_test.sh
+    id: lang-test-quick
+    language: system
     name: language test (quick)
-    entry: ai/scripts/lang_test.sh
-    language: system
     pass_filenames: false
     stages:
     - pre-push
-  - id: ai-envelope-local
+  - entry: python ai/scripts/check_envelope_local.py
+    id: ai-envelope-local
+    language: system
     name: AI envelope (local scope check)
-    entry: python ai/scripts/check_envelope_local.py
-    language: system
     pass_filenames: false
     stages:
     - pre-push
+  repo: local
