feat: add dynamic workflow gate script and plugin manifests
- Add update_workflow_gate.py with dynamic plugin workflow discovery
- Script automatically finds workflows in src/plugins/*/(.github|templates/.github)/workflows/
- Generates gate jobs with proper naming (e.g., gate_commit_message, gate_root_hygiene)
- Adds dependency injection to existing jobs in main workflow
- Create commit-msg-kit plugin manifest with commit message tools
- Create root-hygiene-kit plugin manifest with root directory organization
- Enhance bootstrap.py merge logic to preserve custom exclude patterns
- Fix language exclusion handling to avoid null conversion issues

--- a/sh/bootstrap-dev/.pre-commit-config.yaml
+++ b/sh/bootstrap-dev/.pre-commit-config.yaml
@@ -9,11 +9,11 @@ repos:
   rev: v4.6.0
 - hooks:
   - entry: ai/scripts/lang_lint.sh
+    exclude: (^src/foo_test_project/*)|((.*\.py$))
     id: lang-lint
     language: system
     name: language lint (auto-detect)
     pass_filenames: false
-    exclude: (.*\.py$)
   - entry: ai/scripts/lang_test.sh
     id: lang-test-quick
     language: system
