refactor: Break bootstrap.py into maintainable modular architecture
- Extract monolithic bootstrap.py (1000+ lines) into focused modules:
  - yaml_operations.py: Pure YAML merging utilities
  - state_manager.py: Installation state tracking
  - plugin_system.py: Plugin discovery and management
  - config_manager.py: Configuration file customization
  - component_manager.py: Component operations
  - doctor.py: Diagnostic and validation functionality
  - bootstrap.py: Clean orchestration class

- Benefits achieved:
  - Single responsibility per module (150-250 lines vs 1000+)
  - Clear interfaces with no circular dependencies
  - Independent testability for each module
  - Preserved backward compatibility for public API
  - Clean dependency hierarchy

- Validated functionality:
  - All modules initialize correctly
  - YAML operations unit tests pass
  - Public API preserved (list_all_profiles works)
  - Modular architecture verified

This refactoring transforms the codebase into a maintainable,
extensible architecture while preserving all existing functionality.

--- a/sh/bootstrap-dev/.pre-commit-config.yaml
+++ b/sh/bootstrap-dev/.pre-commit-config.yaml
@@ -9,7 +9,7 @@ repos:
   rev: v4.6.0
 - hooks:
   - entry: ai/scripts/lang_lint.sh
-    exclude: ((^src/foo_test_project/*)|((.*\.py$)))|((.*\.py$))
+    exclude: (.*\.py$)
     id: lang-lint
     language: system
     name: language lint (auto-detect)
