--- a/sh/bootstrap-dev/.github/workflows/ai_guardrails_on_commit.yaml
+++ b/sh/bootstrap-dev/.github/workflows/ai_guardrails_on_commit.yaml
@@ -1,18 +1,20 @@
 name: AI Guardrails (Full)
-true:
+
+on:
   pull_request:
-    types:
-    - opened
-    - edited
-    - synchronize
-    - reopened
-  push: null
+    types: [opened, edited, synchronize, reopened]
+  push:
+    # default is all branches; uncomment to restrict
+    # branches: ['**']
+
 permissions:
   contents: read
   pull-requests: read
+
 concurrency:
   group: ai-guardrails-${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: false
+
 jobs:
   envelope:
     if: ${{ github.event_name == 'pull_request' }}
@@ -20,85 +22,55 @@ jobs:
     env:
       GITHUB_TOKEN: ${{ github.token }}
     steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-python@v5
-      with:
-        python-version: '3.11'
-    - run: python -m pip install --upgrade pip jsonschema requests
-    - name: Validate envelope & scope
-      run: python ai/scripts/check_envelope.py
-    needs:
-    - gate_commit_message
-    - gate_demo_gate
-    - gate_root_hygiene
-    - gate_doc_guardrails
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+      - run: python -m pip install --upgrade pip jsonschema requests
+      - name: Validate envelope & scope
+        run: python ai/scripts/check_envelope.py
+
   python:
-    if: ${{ hashFiles('**/pyproject.toml', '**/requirements.txt') != '' || hashFiles('**/*.py')
-      != '' }}
+    if: ${{ hashFiles('**/pyproject.toml', '**/requirements.txt') != '' || hashFiles('**/*.py') != '' }}
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-python@v5
-      with:
-        python-version: '3.11'
-    - name: Install deps
-      run: 'set -euxo pipefail
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+      - name: Install deps
+        run: |
+          set -euxo pipefail
+          python -m pip install --upgrade pip
+          [ -f requirements-dev.txt ] && pip install -r requirements-dev.txt || true
+          [ -f requirements.txt ] && pip install -r requirements.txt || true
+          pip install -q pytest ruff mypy
+      - run: ruff check .
+      - run: mypy .
+      - run: pytest -q
 
-        python -m pip install --upgrade pip
-
-        [ -f requirements-dev.txt ] && pip install -r requirements-dev.txt || true
-
-        [ -f requirements.txt ] && pip install -r requirements.txt || true
-
-        pip install -q pytest ruff mypy
-
-        '
-    - run: ruff check .
-    - run: mypy .
-    - run: pytest -q
-    needs:
-    - gate_commit_message
-    - gate_demo_gate
-    - gate_root_hygiene
-    - gate_doc_guardrails
   node:
     if: ${{ hashFiles('**/package.json') != '' }}
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-node@v4
-      with:
-        node-version: '20'
-        cache: npm
-    - name: Install
-      run: "set -euxo pipefail\nif [ -f package-lock.json ]; then\n  npm ci\nelif\
-        \ [ -f pnpm-lock.yaml ]; then\n  corepack enable\n  pnpm i --frozen-lockfile\n\
-        elif [ -f yarn.lock ]; then\n  yarn --frozen-lockfile\nelse\n  npm i\nfi\n"
-    - name: Lint
-      run: npx -y eslint . || npx -y @biomejs/biome check .
-    - name: T
-    needs:
-    - gate_commit_message
-    - gate_demo_gate
-    - gate_root_hygiene
-    - gate_doc_guardrails
-  gate_commit_message:
-    uses: ./.github/workflows/commit-message.yaml
-    secrets: inherit
-  gate_demo_gate:
-    uses: ./.github/workflows/demo-gate.yaml
-    secrets: inherit
-  gate_root_hygiene:
-    uses: ./.github/workflows/root-hygiene.yaml
-    secrets: inherit
-  gate_doc_guardrails:
-    uses: ./.github/workflows/doc-guardrails.yaml
-    secrets: inherit
-'on':
-  pull_request:
-    types:
-    - opened
-    - edited
-    - synchronize
-    - reopened
-  push: null
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+      - name: Install
+        run: |
+          set -euxo pipefail
+          if [ -f package-lock.json ]; then
+            npm ci
+          elif [ -f pnpm-lock.yaml ]; then
+            corepack enable
+            pnpm i --frozen-lockfile
+          elif [ -f yarn.lock ]; then
+            yarn --frozen-lockfile
+          else
+            npm i
+          fi
+      - name: Lint
+        run: npx -y eslint . || npx -y @biomejs/biome check .
+      - name: T
