--- a/sh/bootstrap-dev/src/ai-guardrails-templates/.pre-commit-config.yaml.example
+++ b/sh/bootstrap-dev/src/ai-guardrails-templates/.pre-commit-config.yaml.example
@@ -14,6 +14,7 @@ repos:
         entry: ai/scripts/lang_lint.sh
         language: system
         pass_filenames: false
+        exclude: (.*\.py$)|(.*\.md$)
       - id: lang-test-quick
         name: language test (quick)
         entry: ai/scripts/lang_test.sh
