infra: restructured infra/ to packages/

--- a/sh/bootstrap-dev/src/installation-manifest.yaml
+++ b/sh/bootstrap-dev/src/installation-manifest.yaml
@@ -20,10 +20,10 @@ components:
   scripts:
     description: "All automation scripts"
     file_patterns:
-      - "ai/scripts/*.py"
-      - "ai/scripts/*.sh"
+      - "ai/scripts/**/*.py"   # Recursive pattern to include subdirectories
+      - "ai/scripts/**/*.sh"   # Recursive pattern to include subdirectories
     post_install:
-      - "chmod +x ai/scripts/*.py ai/scripts/*.sh"
+      - "chmod +x ai/scripts/**/*.py ai/scripts/**/*.sh"
 
   github:
     description: "GitHub integration files"
@@ -75,9 +75,13 @@ settings:
   # Plugin repository configuration
   plugins_directory: "plugins"  # Relative to manifest directory (src/)
 
+  # Target structure validation
+  target_structure_schema: "target-structure.schema.yaml"  # Expected directory structure
+
   auto_create_directories: true
   preserve_existing: true  # Don't overwrite without --force
   validate_before_install: true
+  validate_target_structure: true  # Validate against target schema after install
   update_gitignore: true
   gitignore_entries:
     - ".ai/envelope.json"
