feat: create ADR-003 example/template idempotency strategy
- Add comprehensive idempotency strategy for example/template files
- Document canonical naming conventions (.example/.template suffix)
- Define YAML merging strategy with user customization preservation
- Establish enforcement mechanisms and validation requirements
- Remove deprecated development/ directory containing legacy code

Closes: Architecture decision for example file handling
Ref: ADR-003-example-template-idempotency-strategy.md

--- a/sh/bootstrap-dev/.ai-guardrails-state.yaml
+++ b/sh/bootstrap-dev/.ai-guardrails-state.yaml
@@ -68,17 +68,26 @@ installation_history:
   - docs
   profile: standard
   timestamp: '2025-09-06T11:50:43.594945'
+- timestamp: '2025-09-06T23:14:57.951190'
+  action: install_profile
+  profile: standard
+  components:
+  - core
+  - schemas
+  - scripts
+  - precommit
+  - docs
 installed_components:
-- doc-docs
-- doc-templates
 - core
-- doc-config
-- scripts
-- doc-scripts
-- github
-- docs
 - precommit
+- doc-scripts
+- docs
+- doc-templates
+- doc-config
 - schemas
+- doc-docs
 - doc-workflows
+- github
+- scripts
 installed_profile: standard
 version: '1.0'
