--- a/sh/bootstrap-dev/.pre-commit-config.yaml
+++ b/sh/bootstrap-dev/.pre-commit-config.yaml
@@ -1,31 +1,31 @@
 repos:
-- hooks:
+- repo: https://github.com/pre-commit/pre-commit-hooks
+  rev: v4.6.0
+  hooks:
   - id: end-of-file-fixer
   - id: trailing-whitespace
   - id: mixed-line-ending
   - id: check-merge-conflict
   - id: detect-private-key
-  repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: v4.6.0
-- hooks:
-  - entry: ai/scripts/lang_lint.sh
-    exclude: (.*\.py$)
-    id: lang-lint
-    language: system
+- repo: local
+  hooks:
+  - id: lang-lint
     name: language lint (auto-detect)
-    pass_filenames: false
-  - entry: ai/scripts/lang_test.sh
-    id: lang-test-quick
+    entry: ai/scripts/lang_lint.sh
     language: system
+    pass_filenames: false
+    exclude: (.*\.py$)
+  - id: lang-test-quick
     name: language test (quick)
-    pass_filenames: false
-    stages:
-    - pre-push
-  - entry: python ai/scripts/check_envelope_local.py
-    id: ai-envelope-local
+    entry: ai/scripts/lang_test.sh
     language: system
-    name: AI envelope (local scope check)
     pass_filenames: false
     stages:
     - pre-push
-  repo: local
+  - id: ai-envelope-local
+    name: AI envelope (local scope check)
+    entry: python ai/scripts/check_envelope_local.py
+    language: system
+    pass_filenames: false
+    stages:
+    - pre-push
