chore: Consolidate ai/scripts paths to .ai/scripts
Complete path consolidation from ai/scripts to .ai/scripts across all manifests and workflows.
This aligns with the standardized .ai/ directory structure for better organization.

Changes:
- Installation manifest: Updated script patterns and post_install commands
- Plugin manifests: Updated file patterns in commit-msg-kit, demos-on-rails-kit, root-hygiene-kit
- Workflow files: Updated GitHub Actions script references
- Pre-commit configs: Updated script entry points

All references now point to .ai/scripts/** for consistency with the new directory structure.

Resolves path consolidation requirements for standardized .ai/ directory.

--- a/sh/bootstrap-dev/src/ai-guardrails-templates/templates/.github/workflows/ai_guardrails_on_commit.yaml
+++ b/sh/bootstrap-dev/src/ai-guardrails-templates/templates/.github/workflows/ai_guardrails_on_commit.yaml
@@ -28,7 +28,7 @@ jobs:
           python-version: '3.11'
       - run: python -m pip install --upgrade pip jsonschema requests
       - name: Validate envelope & scope
-        run: python ai/scripts/check_envelope.py
+        run: python .ai/scripts/check_envelope.py
 
   python:
     if: ${{ hashFiles('**/pyproject.toml', '**/requirements.txt') != '' || hashFiles('**/*.py') != '' }}
