--- a/sh/bootstrap-dev/src/plugins/root-hygiene-kit/plugin-manifest.yaml
+++ b/sh/bootstrap-dev/src/plugins/root-hygiene-kit/plugin-manifest.yaml
@@ -24,7 +24,7 @@ components:
     file_patterns:
       - ".githooks/**/*"
       - ".ai/guardrails/**/*"
-      - "ai/scripts/**/*"
+      - ".ai/scripts/**/*"
       - "ai/snippets/**/*"
 
   github-hygiene:
