docs: add sprint plan for schema path migration completion
- Document remaining migration work from ai/ to .ai/ paths
- Focus on schema files and bootstrap script updates
- Define 3-day sprint to complete the path consolidation

--- a/sh/bootstrap-dev/src/installation-manifest.yaml
+++ b/sh/bootstrap-dev/src/installation-manifest.yaml
@@ -15,7 +15,7 @@ components:
   schemas:
     description: "JSON schemas for validation"
     file_patterns:
-      - "ai/schemas/*.json"
+      - ".ai/schemas/*.json"
 
   scripts:
     description: "All automation scripts"
