--- a/sh/bootstrap-dev/src/ai-guardrails-templates/.pre-commit-config.yaml.example
+++ b/sh/bootstrap-dev/src/ai-guardrails-templates/.pre-commit-config.yaml.example
@@ -11,19 +11,19 @@ repos:
     hooks:
       - id: lang-lint
         name: language lint (auto-detect)
-        entry: ai/scripts/lang_lint.sh
+        entry: .ai/scripts/lang_lint.sh
         language: system
         pass_filenames: false
         exclude: (.*\.py$)|(.*\.md$)
       - id: lang-test-quick
         name: language test (quick)
-        entry: ai/scripts/lang_test.sh
+        entry: .ai/scripts/lang_test.sh
         language: system
         pass_filenames: false
         stages: [pre-push]
       - id: ai-envelope-local
         name: AI envelope (local scope check)
-        entry: python ai/scripts/check_envelope_local.py
+        entry: python .ai/scripts/check_envelope_local.py
         language: system
         pass_filenames: false
         stages: [pre-push]
