feat: automate githooks setup and enhance plan TUI
- Add githooks component to installation manifest for automatic git hooks setup
- Include githooks in standard and full profiles (excluded from minimal)
- Add post-install actions: chmod +x and git config core.hooksPath
- Enhance plan command with target directory structure tree view
- Display hierarchical file structure with color-coded files vs directories
- Improve UX by showing visual preview of final project structure

Benefits:
- Zero-config git hooks setup for plugins (commit-msg-kit, root-hygiene-kit, etc.)
- Clear visualization of installation impact before execution
- Automatic git configuration for modular hook system
- Enhanced developer experience with professional TUI

--- a/sh/bootstrap-dev/src/installation-manifest.yaml
+++ b/sh/bootstrap-dev/src/installation-manifest.yaml
@@ -31,6 +31,14 @@ components:
       - "templates/.github/**/*"
     target_prefix: "templates/"  # Remove 'templates/' prefix when installing
 
+  githooks:
+    description: "Modular git hooks infrastructure"
+    file_patterns:
+      - ".githooks/**/*"
+    post_install:
+      - "chmod +x .githooks/*"
+      - "git config core.hooksPath .githooks || true"  # Ignore if not in git repo
+
   precommit:
     description: "Pre-commit configuration"
     file_patterns:
@@ -52,11 +60,11 @@ profiles:
 
   standard:
     description: "Standard installation for most projects"
-    components: ["core", "schemas", "scripts", "precommit", "docs"]
+    components: ["core", "schemas", "scripts", "githooks", "precommit", "docs"]
 
   full:
     description: "Full installation with GitHub integration"
-    components: ["core", "schemas", "scripts", "github", "precommit", "docs"]
+    components: ["core", "schemas", "scripts", "githooks", "github", "precommit", "docs"]
 
 # Environment detection rules
 environment_detection:
